bug fixes with input mis alignment and response

--- a/src/css/form.css
+++ b/src/css/form.css
@@ -27,12 +27,13 @@
 .form > select,
 .form > textarea {
   font-size:18px;
-  padding:10px 10px 5px 5px;
+  padding:10px 10px 5px 0px;
   display:block;
   width:300px;
   border:none;
-  border-bottom:2px solid rgba(117, 117, 117, 0.15);
-  transition: all 0.5s ease;
+  border-bottom:1px solid #dcdcdc;
+  transition: all 0.5s ease-in-out;
+  transition: border 0.1s ease;
   background-color: inherit;
 }
 
@@ -54,9 +55,9 @@
 .form > textarea:focus { outline:none; }
 
 .form > input[type='text'][disabled]{
-  border-radius: 2px;
-  background-color: #eee;
-  border-bottom: 0px;
+  background-color: transparent;
+  border-bottom: 2px dotted #dadada;
+  color: #c1c1c1;
 }
 .form > textarea {
   background-color: #f9f9f9;
@@ -67,36 +68,46 @@
 
 /* Label ======================================= */
 .form > label {
-  color:#999;
+  color:#9e9e9e;
   font-size:18px;
   font-weight:normal;
   position:relative;;
   pointer-events:none;
-  left:5px;
-  top:-35px;
+  top:-27px;
   transition:0.2s ease all;
 }
 
-/* active state */
+.form > input[type='text'][disabled] + label {
+  top:-50px;
+  font-size:12px;
+}
+
+/* Focus state */
 .form > input[type="text"]:focus + label,
-.form > input[type="text"]:valid + label,
 .form > input[type="number"]:focus + label,
-.form > input[type="number"]:valid + label,
 .form > input[type="email"]:focus + label,
-.form > input[type="email"]:valid + label,
 .form > input[type="password"]:focus + label,
-.form > input[type="password"]:valid + label,
 .form > input[type="color"]:focus + label,
+.form > input[type="tel"]:focus + label,
+.form > input[type="url"]:focus + label  {
+  top:-50px;
+  font-size:12px;
+  color:#03A9F4 !important;
+}
+
+/* Valid state */
+.form > input[type="text"]:valid + label,
+.form > input[type="number"]:valid + label,
+.form > input[type="email"]:valid + label,
+.form > input[type="password"]:valid + label,
 .form > input[type="color"]:valid + label,
 .form > input[type="date"] + label,
-.form > input[type="tel"]:focus + label,
 .form > input[type="tel"]:valid + label,
 .form > input[type="time"] + label,
-.form > input[type="url"]:focus + label,
 .form > input[type="url"]:valid + label  {
-  top:-55px;
-  font-size:14px;
-  color:#5264AE;
+  top:-50px;
+  font-size:12px;
+  color:#9e9e9e;
 }
 
 /* Button ======================================= */
@@ -107,17 +118,16 @@
   display: inline-block;
   position: relative;
   border-radius: 2px;
-  font-size: 0.9em;
-  background-color: #4285f4;
+  font-size: 11pt;
+  background-color: #2196f3;
   color: #fff;
   border: none;
-  padding: 16px 20px;
+  padding: 13px 16px;
   margin: 12px 12px 12px 0px;
-  font-weight: 500;
+  font-weight: 400;
   text-transform: uppercase;
   text-align: center;
   text-decoration: none;
-  font-weight: bold;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.2s ease;
 }
@@ -127,6 +137,7 @@
 .form > input[type="reset"]:active,
 .form > input[type="submit"]:active {
   box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2);
+  background-color: #4285f4;
 }
 
 .form > input[type="submit"] {
@@ -139,9 +150,10 @@
   color: #fff;
 }
 
-.form > input[disabled] {
+.form > input[type="button"][disabled] {
   background-color: #eee;
-  color: #646464;
+  color: #bfbfbf;
+  box-shadow: initial;
 }
 
 /* Radio ======================================= */
